# TGRA-Project_5

./: .gitignore  CMakeLists.txt  main.cpp
Core/: boiler.cpp  boiler.h  matrix.cpp  matrix.h  vector3.cpp  vector3.h
Game/: game.cpp  game.h
LAb5/: Base3DObjects.py  Control3DProgram.py  Matrices.py  Shaders.py  main.py  simple3D.frag  simple3D.vert
OpenGLCore/: Shader3D.cpp  Shader3D.h  baseObjects.cpp  baseObjects.h
Shaders/: simple3D.frag  simple3D.vert
